books/projects/rac/tests/yaml_test/data_types/static-invalid.ref.stderr
static-invalid.cpp:6 (9-12): syntax error, unexpected INT, expecting CONST
 6 |   static int foo = 3;
   |          ^^^
